--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
           Desarrollador front-end apasionado por el diseño y la funcionalidad, desde 01/07/2021 trabajando en desarrollo con JavaScript,<br/>
           Bootstrap y SharePoint Designer, y 3 años de experiencia en consultoría. Soy responsable de crear aplicaciones y <br/>
           automatizaciones que ayudan a hacer los procesos del negocio más efectivos y<br/>
-          agiles. Aspiro a especializarme en Pentesting.<br/>
+          agiles. Aspiro a especializarme en React.js.<br/>
           No desarrollo solamente para tener una mejor condicion laboral o hacer lo que me gusta <br/>
           sino por la emoción que me genera aportar mi pequeño granito de arena, <br/>
           al futuro que todos queremos.
