--- a/index.html
+++ b/index.html
@@ -372,6 +372,7 @@
       <h5 id="tech">Microsoft Office</h5>
       <h5 id="tech">Office 365</h5>
       <h5 id="tech">JavaScript</h5>
+      <h5 id="tech">React</h5>
       <h5 id="tech">Bootstrap</h5><br/>
 
   </div> 
